[gd_scene load_steps=3 format=3 uid="uid://playerhud001"]

[ext_resource type="Script" path="res://player/player_hud.gd" id="1_hud"]
[ext_resource type="Script" path="res://player/gadget_crosshair.gd" id="2_gadget_xhair"]

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxLeft" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxLeft"]
layout_mode = 2
text = "HEALTH"
theme_override_font_sizes/font_size = 12

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxLeft"]
layout_mode = 2
custom_minimum_size = Vector2(200, 20)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HeatLabel" type="Label" parent="MarginContainer/VBoxLeft"]
layout_mode = 2
text = "HEAT"
theme_override_font_sizes/font_size = 12

[node name="HeatBar" type="ProgressBar" parent="MarginContainer/VBoxLeft"]
layout_mode = 2
custom_minimum_size = Vector2(200, 20)
max_value = 100.0
value = 0.0
show_percentage = false

[node name="TimeCurrencyLabel" type="Label" parent="MarginContainer/VBoxLeft"]
layout_mode = 2
text = "TC: 0"
theme_override_font_sizes/font_size = 16

[node name="ShoeSlotLabel" type="Label" parent="MarginContainer/VBoxLeft"]
layout_mode = 2
text = "SHOES: ---"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="FuelLabel" type="Label" parent="MarginContainer/VBoxLeft"]
layout_mode = 2
text = "FUEL: 1000"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1.0, 0.6, 0.2, 1)

[node name="VBoxRight" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="InventoryLabel" type="Label" parent="MarginContainer/VBoxRight"]
layout_mode = 2
text = "INVENTORY"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 12

[node name="InventoryList" type="VBoxContainer" parent="MarginContainer/VBoxRight"]
layout_mode = 2

[node name="InventoryHint" type="Label" parent="MarginContainer/VBoxRight"]
layout_mode = 2
text = "TAB: inventory"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="Crosshair" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="CrosshairDot" type="ColorRect" parent="Crosshair"]
layout_mode = 2
custom_minimum_size = Vector2(4, 4)
color = Color(1, 1, 1, 0.8)

[node name="GadgetCrosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
script = ExtResource("2_gadget_xhair")

[node name="IPLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 30.0
text = "IP: ..."
horizontal_alignment = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)

[node name="FeverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 120.0
text = "FEVER!"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.2, 0.1, 1)
visible = false
